[package]
name = "kt-mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
calamine = "0.25.0"
iced = { version = "0.12", features = ["lazy"] }
iced_table = "0.12.0"
lettre = "0.11.9"
native-dialog = "0.7.0"
rfd = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
